# NolimitAI

./: .gitignore  MANIFEST.in  README.md  README_SPANIHS.md  README_SPANISH.md  pyproject.toml
nolimitai/: __init__.py  nolimitai.py
nolimitai-typescript/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
nolimitai-typescript/src/: index.ts
nolimitai-typescript/src/adapters/: base.ts  gemini-adapter.ts  groq-adapter.ts  index.ts  mistral-adapter.ts  openrouter-adapter.ts  together-adapter.ts
nolimitai-typescript/src/config/: config.ts
nolimitai-typescript/src/core/: errors.ts  round-robin.ts  router.ts
nolimitai-typescript/src/memory/: base.ts  cache.ts
nolimitai-typescript/src/utils/: async-openai.ts
nolimitai/adapters/: __init__.py  adapters.py  base.py  gemini_ai_adapter.py  grop_adapter.py  mistral_ai_adapter.py  openrouter_adapter.py  together_ia_adapter.py
nolimitai/config/: config.py
nolimitai/core/: __init__.py  errors.py  round_robin.py  router.py
nolimitai/memory/: __init__.py  base.py  cache.py
